--- a/kernel/net/netfilter/Kconfig
+++ b/kernel/net/netfilter/Kconfig
@@ -189,6 +189,12 @@ config NF_CONNTRACK_FTP
 
 	  To compile it as a module, choose M here.  If unsure, say N.
 
+config NF_CONNTRACK_RTSP
+	tristate "RTSP protocol support"
+	default n
+	help
+	  Track RTSP connections.
+
 config NF_CONNTRACK_H323
 	tristate "H.323 protocol support"
 	depends on (IPV6 || IPV6=n)
