Revert some changes
Some changes make the device unbootable, so revert them for now.

--- a/kernel/arch/arm/configs/e5577_defconfig
+++ b/kernel/arch/arm/configs/e5577_defconfig
@@ -575,7 +575,7 @@ CONFIG_NET_ACTIVITY_STATS=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_BALONG_TRACE_KFREE_SKB=y
 CONFIG_NETFILTER=y
-CONFIG_PRSITE=y
+# CONFIG_PRSITE is not set
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_BRIDGE_NETFILTER=y
@@ -2535,7 +2535,7 @@ CONFIG_ATP_PRSITE=y
 # CONFIG_ATP_PASS_UP_DAD_PACKETS is not set
 # CONFIG_ATP_BRIDGE_EBT_TIME is not set
 CONFIG_FIREWALL=y
-# CONFIG_ATP_FIREWALL_LOG is not set
+CONFIG_ATP_FIREWALL_LOG=y
 # CONFIG_ATP_SYMNAT is not set
 # CONFIG_ATP_IP_NF_TARGET_CONENAT is not set
 # CONFIG_ATP_IP_NF_TARGET_ALLCONENAT is not set
