--- a/kernel/arch/arm/configs/e5577_defconfig
+++ b/kernel/arch/arm/configs/e5577_defconfig
@@ -575,7 +575,7 @@ CONFIG_NET_ACTIVITY_STATS=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_BALONG_TRACE_KFREE_SKB=y
 CONFIG_NETFILTER=y
-# CONFIG_PRSITE is not set
+CONFIG_PRSITE=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_BRIDGE_NETFILTER=y
